cmake_minimum_required(VERSION 3.22)
project(Chapter2 C)

set(CMAKE_C_STANDARD 11)

add_executable(Chapter2
        #main.c
        #Config.c
        #path_allocate.c
        #Max_open_files.c
        #Assignment/Assignment_1.c
        #Assignment/LendLimitationDemo.c
        Assignment/LegendOptionDemo.c)
